--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -213,6 +213,9 @@ button {
 button:hover {
     background-color: var(--primary-color);
 }
+.button-unset{
+    background-color: unset !important;
+}
 
 .right {
     margin-left: auto;
