--- a/src/View/HabitTracker/habittracker.css
+++ b/src/View/HabitTracker/habittracker.css
@@ -1,18 +1,27 @@
 
 .habit-tracker-container {
     display: flex;
+    width: 100%;
 }
 
 
+/*side nav bar*/
 .sidebar {
-    height: calc(100% - 10px); 
     width: 250px;
     top: 265px; 
     left: 0;
-    background-color:lavender;
+    background-color:var(--primary-color);
     padding-top: 20px;
     margin: 0;
-    position: fixed; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 70vh;
+    background-color: var(--primary-color);
+}
+
+ul {
+    width: 95%;
 }
 
 @media screen and (max-width: 768px) {
@@ -40,14 +49,13 @@
 
 
 .arrow-container {
-    position: fixed;
-    top: 0;
-    z-index: 2;
+    display:flex;
+    align-items: flex-end;
+    margin-top: -10vh;
 }
 
 .arrow-button {
     padding: 5px;
-    margin-top: 265px;
 }
 
 .arrow-icon {
@@ -61,6 +69,7 @@
 
 .arrow-right {
     left: 0;
+    margin-top: 10px;
     transition: left 0.5s;
 }
 
@@ -76,65 +85,66 @@
 .due-button,
 .report-button {
     border: 2px solid transparent;
-    color:rgb(137, 205, 137);
-    padding: 10px;
-    width: 100%;
-    text-align: left;
+    color:var(--background-color);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 95%;
+    text-align: center;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
 
 .habit-button {
-    background-color: #7db78a;
-    color: white;
-    border-radius: 40px;
+    background-color: #0C2E4C;
+    color: var(--background-color);
+    border-radius: 5px;
     text-align: center;
 }
 
 .option-button {
-    background-color: #5485ff;
-    border-radius: 40px;
+    background-color: #0C2E4C;
+    border-radius: 5px;
     text-align: center;
 }
 
 .daily-button,
 .weekly-button {
-    background-color: rgb(108, 162, 188);
-    color: white;
-    border-radius: 40px;
+    background-color: #0C2E4C;
+    color: var(--background-color);
+    border-radius: 5px;
     text-align: center;
 }
 
 .due-button {
-    background-color: #5fc9f8;
-    color: white;
-    border-radius: 40px;
+    background-color: #0C2E4C;
+    color: var(--background-color);
+    border-radius: 5px;
     text-align: center;
 }
 
 .report-button {
-    background-color: #b58fe3;
-    color: white;
-    border-radius: 40px;
+    background-color: #0C2E4C;
+    color: var(--background-color);
+    border-radius: 5px;
     text-align: center;
 }
 
 .sidebar button:hover {
-    background-color: #f0f0f0;
+    background-color: #0C2E4C;
+    color: var(--secondary-color);
 }
 
 .sidebar ul ul {
     margin-top: 10px;
-    padding-left: 20px;
 }
 
 .sidebar ul ul button {
     padding: 8px;
-    width: calc(100% - 16px);
+    width: 90%;
 }
 
 .sidebar ul ul button:hover {
-    background-color: #f0f0f0;
+    color: var(--primary-color);
 }
 
 .main-content {
@@ -142,4 +152,23 @@
     font-style:italic;
     margin-left: 250px;
     color:rgb(93,0,139)
+}
+
+/*daily view*/
+.button-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.daily-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+}
+
+#add-new {
+    background-color: var(--primary-color);
+    border: none;
 }
